Simple Color Corrections
-Themed scrollbar on adding role pop out
-Themed Nitro button in settings

--- a/css/Quiet.css
+++ b/css/Quiet.css
@@ -3263,3 +3263,11 @@ polyline[stroke*="#7289da"]{stroke:var(--main-color) !important;}
 .theme-dark .ui-quick-select-popout-option:hover{background-color: #1b191a;}
 
 .theme-dark #friends .friends-table .friend-table-add-wrapper .friend-table-add-header .connect-accounts .connect-account-btn-inner:hover{background-color: var(--main-color);}
+
+.scrollerThemed-19vinI.themeLight-1WK0Av.scrollerTrack-3hhmU0>.scroller-fzNley::-webkit-scrollbar-track, .theme-dark .scrollerThemed-19vinI.themeLight-1WK0Av.scrollerTrack-3hhmU0>.scroller-fzNley::-webkit-scrollbar-track, .theme-light .scrollerWrap-2uBjct.scrollerTrack-3hhmU0>.scroller-fzNley::-webkit-scrollbar-track{background-color: #19191b;}
+
+.scrollerThemed-19vinI.themeLight-1WK0Av .scroller-fzNley::-webkit-scrollbar-thumb, .theme-dark .scrollerThemed-19vinI.themeLight-1WK0Av .scroller-fzNley::-webkit-scrollbar-thumb, .theme-light .scrollerWrap-2uBjct .scroller-fzNley::-webkit-scrollbar-thumb{background-color: var(--main-color);}
+
+.popout.popout-top-right section:before, .popout.popout-top section:before{border-top-color: var(--main-color);}
+
+[class*="itemBrandSelected-"]{background-color: var(--main-color);}
